--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -6,11 +6,17 @@ doctype html
 html.
   <!-- EVERYTHING AFTER THIS LINE MUST BE TAB SPACED OVER 1 FROM THE HTML TAG-->
   <!-- OTHERWISE IT WILL READ AS JADE AND NOT HTML -->
+  <!-- -->
   <head>
     <title>title</title>
   </head>
   <h1>Testing login</h1>
   <body>
     <p>Testing html</p>
-    <button type="button" value="">Redirect (non functional)</button>
+        <!-- Testing GET actions-->
+      <form method="get">
+        <input type="text" name="input1" >
+        <button type="submit" name="button1" value="REDIR">Redirect (non functional)</button>
+      <form>
+    
   </body>
